--- a/ss3d-server-browser-servers-microservice/appsettings.json
+++ b/ss3d-server-browser-servers-microservice/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Urls": "http://localhost:6000",
+  "ConnectionStrings": {
+    "ServersDatabase": "Server=servers-db;Port=3306;Database=servers;Uid=root;Pwd=root"
+  }
 }
