--- a/ss3d-server-browser-gateway/SS3D-Server-Browser-Gateway.csproj
+++ b/ss3d-server-browser-gateway/SS3D-Server-Browser-Gateway.csproj
@@ -2,9 +2,18 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
-        <RootNamespace>SS3D_Server_Browser_Gateway</RootNamespace>
-        <AssemblyName>SS3D-Server-Browser-Gateway</AssemblyName>
+        <RootNamespace>ss3d_server_browser_gateway</RootNamespace>
+        <AssemblyName>ss3d-server-browser-gateway</AssemblyName>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="RabbitMQ.Client" Version="6.1.0-rc.2" />
+      <PackageReference Include="Utf8Json" Version="1.3.7" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ss3d-server-browser-shared\ss3d-server-browser-shared.csproj" />
+    </ItemGroup>
 
 
 </Project>
