--- a/ss3d-server-browser-servers-microservice/appsettings.Development.json
+++ b/ss3d-server-browser-servers-microservice/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Urls": "http://localhost:6001",
+  "ConnectionStrings": {
+    "ServersDatabase": "Server=servers-db; Port=3306; Database=servers; Uid=root; Pwd=root"
   }
 }
