--- a/ss3d-server-browser-servers-microservice/ss3d-server-browser-servers-microservice.csproj
+++ b/ss3d-server-browser-servers-microservice/ss3d-server-browser-servers-microservice.csproj
@@ -5,5 +5,16 @@
         <RootNamespace>ss3d_server_browser_servers_microservice</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="EntityFramework" Version="6.4.4" />
+      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
+      <PackageReference Include="RabbitMQ.Client" Version="6.1.0-rc.2" />
+      <PackageReference Include="Utf8Json" Version="1.3.7" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ss3d-server-browser-shared\ss3d-server-browser-shared.csproj" />
+    </ItemGroup>
+
 
 </Project>
