--- a/ss3d-server-browser-shared/Dockerfile
+++ b/ss3d-server-browser-shared/Dockerfile
@@ -1,4 +1,4 @@
-﻿FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build-env
+﻿﻿FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build-env
 WORKDIR /app
 
 # Copy csproj and restore as distinct layers
@@ -13,4 +13,4 @@ RUN dotnet publish -c Release -o out
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
 WORKDIR /app
 COPY --from=build-env /app/out .
-ENTRYPOINT ["dotnet", "ss3d-server-browser-gateway.dll"]
+ENTRYPOINT ["dotnet", "ss3d-server-browser-shared.dll"]
