--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       - '8060:8080'
     restart: unless-stopped
     
-  servers-db:
+  news-db:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: unless-stopped
@@ -59,18 +59,15 @@ services:
       MYSQL_USER: root
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: news
+    cap_add:
+    - SYS_NICE # CAP_SYS_NICE
     ports:
-      - 3306:3306
+      - 3307:3307
     expose: 
-      - '3306'
+      - '3307'
     volumes:
       - news-db:/var/lib/mysql
-
-  adminer:
-    image: adminer
-    ports:
-      - 8091:8080
-        
+            
 volumes:
   servers-db:
   news-db:
