--- a/ss3d-server-browser-news-microservice/appsettings.Development.json
+++ b/ss3d-server-browser-news-microservice/appsettings.Development.json
@@ -8,6 +8,7 @@
   },
   "Urls": "http://localhost:6050",
   "ConnectionStrings": {
-    "NewsDatabase": "Server=localhost; Port=3307; Database=news; Uid=root; Pwd=root"
-  }
+    "NewsDatabase": "Server=localhost; Port=3306; Database=news; Uid=root; Pwd=root"
+  },
+  "RabbitHost": "localhost"
 }
