--- a/ss3d-server-browser-news-microservice/appsettings.json
+++ b/ss3d-server-browser-news-microservice/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
   "Urls": "http://localhost:6050",
   "ConnectionStrings": {
-    "NewsDatabase": "Server=news-db; Port=3307; Database=news; Uid=root; Pwd=root"
-  }
+    "NewsDatabase": "Server=db-news; Port=3306; Database=news; Uid=root; Pwd=root"
+  },
+  "RabbitHost": "rabbitmq"
 }
