--- a/ss3d-server-browser-servers-microservice/appsettings.Development.json
+++ b/ss3d-server-browser-servers-microservice/appsettings.Development.json
@@ -8,6 +8,7 @@
   },
   "Urls": "http://localhost:6001",
   "ConnectionStrings": {
-    "ServersDatabase": "Server=servers-db; Port=3306; Database=servers; Uid=root; Pwd=root"
-  }
+    "ServersDatabase": "Server=localhost; Port=3306; Database=servers; Uid=root; Pwd=root"
+  },
+  "RabbitHost": "localhost"
 }
