--- a/ss3d-server-browser-servers-microservice/appsettings.json
+++ b/ss3d-server-browser-servers-microservice/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
   "Urls": "http://localhost:6000",
   "ConnectionStrings": {
-    "ServersDatabase": "Server=servers-db;Port=3306;Database=servers;Uid=root;Pwd=root"
-  }
+    "ServersDatabase": "Server=db-servers;Port=3306;Database=servers;Uid=root;Pwd=root"
+  },
+  "RabbitHost": "rabbitmq"
 }
