--- a/ss3d-server-browser-servers-microservice/ss3d-server-browser-servers-microservice.csproj
+++ b/ss3d-server-browser-servers-microservice/ss3d-server-browser-servers-microservice.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="EntityFramework" Version="6.4.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
       <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
       <PackageReference Include="RabbitMQ.Client" Version="6.1.0-rc.2" />
       <PackageReference Include="Utf8Json" Version="1.3.7" />
