--- a/kubernetes/db-news-deployment.yaml
+++ b/kubernetes/db-news-deployment.yaml
@@ -1,4 +1,4 @@
-﻿apiVersion: apps/v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
@@ -41,7 +41,6 @@ spec:
         name: db-news
         ports:
         - containerPort: 3306
-        - containerPort: 3308
         resources: {}
         securityContext:
           capabilities:
