--- a/kubernetes/db-news-service.yaml
+++ b/kubernetes/db-news-service.yaml
@@ -1,4 +1,4 @@
-﻿apiVersion: v1
+apiVersion: v1
 kind: Service
 metadata:
   annotations:
@@ -11,8 +11,8 @@ metadata:
   name: db-news
 spec:
   ports:
-  - name: "3308"
-    port: 3308
+  - name: "3306"
+    port: 3306
     targetPort: 3306
   selector:
     io.kompose.service: db-news
