--- a/kubernetes/db-servers-deployment.yaml
+++ b/kubernetes/db-servers-deployment.yaml
@@ -1,4 +1,4 @@
-﻿apiVersion: apps/v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
@@ -41,7 +41,6 @@ spec:
         name: db-servers
         ports:
         - containerPort: 3306
-        - containerPort: 3307
         resources: {}
         volumeMounts:
         - mountPath: /var/lib/mysql
