--- a/kubernetes/db-servers-persistentvolumeclaim.yaml
+++ b/kubernetes/db-servers-persistentvolumeclaim.yaml
@@ -1,4 +1,4 @@
-﻿apiVersion: v1
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   creationTimestamp: null
@@ -7,7 +7,7 @@ metadata:
   name: db-servers
 spec:
   accessModes:
-    - ReadWriteOnce
+  - ReadWriteOnce
   resources:
     requests:
       storage: 100Mi
