--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -5,32 +5,24 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  repository_dispatch:
 
 jobs:
   build:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
-#     - name: Setup .NET Core
-#       uses: actions/setup-dotnet@v1
-#       with:
-#         dotnet-version: 3.1.101  
-#     - name: Install dependencies
-#       run: dotnet restore
       
-#     - name: Build
-#       run: dotnet build --configuration Release --no-restore
-      
-#     - name: Test
-#       run: dotnet test --no-restore --verbosity normal
-
     - name: Build docker-compose
       run: docker-compose build
   deploy:
+    needs: [build]
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
+      
     - name: delete current kubernetes deployment
       run: kubectl delete -k ./kubernetes
+      
     - name: Deploy new kubernetes deployment
       run: kubectl apply -k ./kubernetes
