--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -15,6 +15,9 @@ jobs:
       
     - name: Build docker-compose
       run: docker-compose build
+    
+    - name: Push docker-compose
+      run: docker-compose push
   deploy:
     needs: [build]
     runs-on: self-hosted
