--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -22,6 +22,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   build:
+    needs: [sonarcloud]
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
